- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
P3: Somewhat important
 - 
    5.2.0
 - 
    None
 - 
    Windows 7 64 bit, Visual Studio 2012
 
- 
        39e7016e8 (dev), 65a48e7ab (6.8)
 
QAbstractItemView: If the drop indicator is not shown, it is set to a null rectangle. In the paintDropIndicator method it is not testet whether the rectangle is null or not but it is always painted with drawPrimitive. If the rectangle is null this results in a single pixel drawn at position 0, 0.
| For Gerrit Dashboard: QTBUG-36831 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 594681,2 | QAIV drop indicator: don't draw a single pixel when the rect is null | dev | qt/qtbase | Status: MERGED | +2 | 0 | 
| 594939,2 | QAIV drop indicator: don't draw a single pixel when the rect is null | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |