QAIV drop indicator: don't draw a single pixel when the rect is null

Drive-by change: fix a trivial typo
Also, clang-format changed some indentation

Fixes: QTBUG-36831
Pick-to: 6.8
Change-Id: Icb259cc8a1fc83aca3d4cd581fa0e88e7907602b
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>